added field and updated docs
