# src/routes/threadcomment/threadcomment.controller.ts
@@ -6,7 +6,8 @@ import BaseCRUDController, { CRUDControllerOptions } from '../../utils/CRUDContr
 import {  PipelineStage } from 'mongoose';
 import { UserRoles } from '../../types/user.types';
 import Utils from '../../utils/utils';
-import { HTTPInternalServerError } from '../../errors/errorWithStatus';
+import { HTTPBadRequestError, HTTPInternalServerError } from '../../errors/errorWithStatus';
+import Thread from '../../models/thread.model';
 
 const CRUDOpts: CRUDControllerOptions<TThreadComment, TThreadCommentDocument> = {
 
@@ -88,8 +89,12 @@ const CRUDOpts: CRUDControllerOptions<TThreadComment, TThreadCommentDocument> = 
 
         //hinzufügen, dass man nur Kommentare in Threads erstellen kann, zu denen man access hat
         createBaseBody: async (req) => {
+            const thread = await Thread.findOne({_id: req.body.thread}).populate('course')
+
+        if(!thread) throw new HTTPBadRequestError("Thread not found")
             return {
-                createdBy: req.user._id
+                createdBy: req.user._id,
+                createdByOwner: req.user._id.equals(thread.course.owner)
             }
         },
 
@@ -104,7 +109,7 @@ const CRUDOpts: CRUDControllerOptions<TThreadComment, TThreadCommentDocument> = 
             if(!threadComment) {
                 throw new HTTPInternalServerError("Error in createPostProc of threadcomment controller")
             }
-            await Utils.createNotification([...threadComment.thread.course.members, ...threadComment.thread.course.owner], `Neuer Kommentar auf einen Thread`, "Es wurde ein neuer Kommentar im Thread mem lal lol erstellt. Bitte einloggen")
+            await Utils.createNotification([...threadComment.thread.course.members, threadComment.thread.course.owner], `Neuer Kommentar auf einen Thread`, "Es wurde ein neuer Kommentar im Thread mem lal lol erstellt. Bitte einloggen")
             return data
         },
 
