# src/types/threadcomment.types.ts
@@ -7,6 +7,8 @@ export type TThreadComment = {
     createdBy: TUserDocument['_id']
     message: string
     deleted: boolean
+    //virtual
+    createdByOwner: boolean
 }
 
 export interface TThreadCommentDocument extends TThreadComment, Document { }
